--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "skeleton-keyhole",
   "version": "0.3.1",
-  "main":"keyhole.js",
+  "main": "keyhole.js",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.1.3"
+    "express": "^4.17.1",
+    "karma": "^5.2.3",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^2.0.1",
+    "mocha": "^8.2.0"
   },
   "scripts": {
-    "serve": "npx node-static -p 8080"
+    "serve": "node ./serve.js",
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "full-test": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless,IE karma.conf.js"
   },
   "dependencies": {}
 }
