--- a/package.json
+++ b/package.json
@@ -1,21 +1,43 @@
 {
   "name": "skeleton-keyhole",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "main": "keyhole.js",
+  "description": "A Webcomponent for Maps",
+  "keywords": [
+    "geospatial",
+    "map",
+    "mapbox",
+    "leaflet"
+
+  ],
+  "author": "Abbey Hawk Sparrow <@khrome> (http://patternweaver.com)",
+  "contributors": [],
+  "bugs": {
+    "url": "https://github.com/khrome/skeleton-keyhole/issues"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/khrome/skeleton-keyhole.git"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "express": "^4.17.1",
     "karma": "^5.2.3",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-env-preprocessor": "^0.1.1",
     "karma-firefox-launcher": "^2.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^2.0.1",
+    "karma-spec-reporter": "0.0.32",
     "mocha": "^8.2.0"
   },
   "scripts": {
     "serve": "node ./serve.js",
     "test": "./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "test-ff": "./node_modules/karma/bin/karma start --browsers Firefox karma.conf.js --debug",
+    "test-ff": "./node_modules/karma/bin/karma start --browsers Chrome karma.conf.js --debug",
     "full-test": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless,IE karma.conf.js"
   },
   "dependencies": {}
