--- a/package.json
+++ b/package.json
@@ -1,42 +1,119 @@
 {
-  "name": "skeleton-keyhole",
-  "version": "0.9.5",
-  "main": "keyhole.js",
-  "description": "A Webcomponent for Maps",
-  "keywords": [
-    "geospatial",
-    "map",
-    "mapbox",
-    "leaflet"
-  ],
-  "author": "Abbey Hawk Sparrow <@khrome> (http://patternweaver.com)",
-  "contributors": [],
-  "bugs": {
-    "url": "https://github.com/khrome/skeleton-keyhole/issues"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/khrome/skeleton-keyhole.git"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "express": "^4.17.1",
-    "karma": "^5.2.3",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^2.0.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^2.0.1",
-    "karma-spec-reporter": "0.0.32",
-    "mocha": "^8.2.0"
-  },
-  "scripts": {
-    "serve": "node ./serve.js",
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js",
-    "test-ff": "./node_modules/karma/bin/karma start --browsers Chrome karma.conf.js --debug",
-    "full-test": "karma start --single-run --browsers ChromeHeadless,FirefoxHeadless,IE karma.conf.js"
-  },
-  "dependencies": {}
+    "name": "skeleton-keyhole",
+    "version": "1.0.0",
+    "type": "module",
+    "main": "dist/index.mjs",
+    "module": "src/index.mjs",
+    "commonjs": "dist/index.cjs",
+    "exports": {
+        ".": {
+            "import": "./src/index.mjs",
+            "require": "./dist/index.cjs"
+        },
+        "./package.json": {
+            "import": "./package.json",
+            "require": "./package.json"
+        },
+        "./mapbox": {
+            "import": "./src/engines/mapbox.mjs",
+            "require": "./dist/engines/mapbox.cjs"
+        },
+        "./leaflet": {
+            "import": "./src/engines/leaflet.mjs",
+            "require": "./dist/engines/leaflet.cjs"
+        },
+        "./src/index.mjs": {
+            "import": "./src/index.mjs",
+            "require": "./dist/index.cjs"
+        },
+        "./dist/index.cjs": {
+            "import": "./src/index.mjs",
+            "require": "./dist/index.cjs"
+        }
+    },
+    "homepage": "https://github.com/khrome/skeleton-keyhole",
+    "description": "A Webcomponent for Maps",
+    "keywords": [],
+    "author": "Abbey Hawk Sparrow <khrome>(http://abbeyhawksparrow.com)",
+    "contributors": [],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/khrome/skeleton-keyhole"
+    },
+    "bugs": {
+        "url": "https://api.github.com/repos/khrome/skeleton-keyhole/issues"
+    },
+    "moka": {
+        "firefox": {
+            "engine": "@open-automaton/playwright-mining-engine",
+            "options": {
+                "type": "firefox"
+            }
+        },
+        "chrome": {
+            "engine": "@open-automaton/playwright-mining-engine",
+            "options": {
+                "type": "chromium"
+            }
+        },
+        "safari": {
+            "engine": "@open-automaton/playwright-mining-engine",
+            "options": {
+                "type": "webkit"
+            }
+        },
+        "stub": "node_modules/@open-automaton/moka/src/stub.mjs",
+        "stubs": [
+            "express",
+            "module",
+            "os",
+            "fs",
+            "path"
+        ],
+        "shims": {
+            "chai": "node_modules/chai/chai.js",
+            "browser-or-node": "node_modules/browser-or-node/src/index.js"
+        }
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/cli": "^7.22.5",
+        "@babel/core": "^7.22.5",
+        "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+        "@environment-safe/chai": "^0.2.0",
+        "@environment-safe/commonjs-builder": "^0.0.3",
+        "@environment-safe/jsdoc-builder": "^0.0.2",
+        "@open-automaton/moka": "^0.5.2",
+        "babel-plugin-search-and-replace": "^1.1.1",
+        "babel-plugin-transform-import-meta": "^2.2.0",
+        "chai": "^4.3.7",
+        "eslint": "^8.43.0",
+        "husky": "^8.0.3",
+        "mocha": "^10.2.0"
+    },
+    "scripts": {
+        "lint": "eslint src/*.mjs test/*.mjs",
+        "test": "npm run import-test; npm run browser-test; npm run require-test",
+        "import-test": "mocha test/test.mjs",
+        "require-test": "mocha test/test.cjs",
+        "build-commonjs": "./node_modules/@environment-safe/commonjs-builder/bin/build.mjs",
+        "local-server-mapbox": "open \"http://localhost:8085/test/static/demo-mapbox.html?token=$MAPBOX_API_TOKEN\" ; npx http-server -p 8085",
+        "local-server-leaflet": "open \"http://localhost:8085/test/static/demo-leaflet.html ; npx http-server -p 8085",
+        "headless-browser-test": "npm run headless-chrome-test; npm run headless-firefox-test; npm run headless-safari-test",
+        "headless-chrome-test": "moka --server . --browser chrome test/test.mjs",
+        "headless-firefox-test": "moka --server . --browser firefox test/test.mjs",
+        "headless-safari-test": "moka --server . --browser safari test/test.mjs",
+        "browser-test": "moka --server . --local-browser test/test.mjs",
+        "container-test": "docker build . -t environment-safe-package.json -f ./containers/test.dockerfile; docker logs --follow \"$(docker run -d environment-safe-package.json)\"",
+        "build-docs": "build-jsdoc docs",
+        "build-types": "build-jsdoc types",
+        "add-generated-files-to-commit": "git add docs/*.md; git add src/*.d.ts; git add dist/*.cjs",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@environment-safe/elements": "^0.0.2",
+        "@turf/bbox-polygon": "^6.5.0",
+        "@turf/turf": "^6.5.0",
+        "browser-or-node": "^2.1.1"
+    }
 }
